--- a/style.css
+++ b/style.css
@@ -796,7 +796,10 @@ scroll {  0% {
       }
   
   
-  
+  .sticky-wrapper .shrink {
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
+  }
 
 
 
